--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.section-title {
+    font-size: 40px;
+}
+
 /* --------------------------------- Header Section Styles--------------------------------- */
 header {
     background-image: url(images/banner/banner1.png);
@@ -13,11 +17,11 @@ header {
     text-align: end;
 }
 
-.banner-info{
+.banner-info {
     position: absolute;
     top: 25%;
     left: 50%;
-    width: 525px;   
+    width: 525px;
 }
 
 header h1 {
@@ -42,4 +46,122 @@ header p {
     border-radius: 5px;
     background: #F15B22;
     padding: 21px 26px;
+}
+
+/* -------------------------------------- Failure Section Styles-------------------------------------- */
+.failure-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.failure-section img {
+    margin: 140px 0 0 228px;
+}
+
+.failure-info {
+    width: 416px;
+    margin: 170px 322px 0 0;
+}
+
+.section-title {
+    padding-bottom: 24px;
+}
+
+.list {
+    padding-top: 16px;
+}
+
+.check-list {
+    padding-top: 8px;
+}
+
+/* -------------------------------------- My Plan Section-------------------------------------- */
+.plan-section {
+    margin: 130px 0;
+    text-align: center;
+
+}
+
+.plans {
+    display: flex;
+    justify-content: center;
+    gap: 86px;
+    margin-top: 56px;
+}
+
+.plans img {
+    width: 92.958px;
+    height: 92.958px;
+}
+
+.plans h4 {
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.plans p {
+    font-size: 25px;
+}
+
+/* ------------------------------------------------ Bottom Banner Section Styles------------------------------------ */
+.primary-btn {
+    color: #F15B22;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    border: 0;
+    padding: 20px 36px;
+    border-radius: 8px;
+}
+
+.bottom-banner {
+    background-image: linear-gradient(270deg, rgba(255, 255, 255, 0), rgba(183, 52, 0, 0.676)), url(images/watch.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 300px;
+    color: #fff;
+    margin: 0 275px 130px 275px;
+    border-radius: 20px;
+}
+
+.bottom-banner-info {
+    padding: 60px 64px;
+    width: 459px
+}
+
+/* ------------------------------------ Footer Section Styles------------------------------------ */
+footer {
+    background: #151414;
+    width: 100%;
+    height: 577px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 330px;
+}
+
+.future-section {
+    width: 485px;
+}
+
+.future-section p {
+    margin: 16px 0;
+}
+.future-section img{
+    padding-right: 15px;
+}
+.subs-section button {
+    margin-top: 16px;
+}
+
+.subs-section input {
+    width: 325px;
+    height: 64px;
+    border-radius: 8px;
+    border: 1px solid #FFF;
+    color: #F3F3F3;
+    padding-left: 21px;
+    background: #151414;
 }
